# Ambulance_Project/Workspace/AmbulnaceTrackingSystem/modules/casemngt-headless-delivery/casemngt-headless-delivery-api/src/main/java/casemngt/headless/delivery/resource/v1_0/CaseMngtResource.java
@@ -10,6 +10,7 @@ import com.liferay.portal.kernel.service.RoleLocalService;
 import com.liferay.portal.odata.filter.ExpressionConvert;
 import com.liferay.portal.odata.filter.FilterParserProvider;
 import com.liferay.portal.vulcan.accept.language.AcceptLanguage;
+import com.liferay.portal.vulcan.pagination.Page;
 
 import java.util.Collections;
 import java.util.List;
@@ -41,7 +42,7 @@ public interface CaseMngtResource {
 		return FactoryHolder.factory.create();
 	}
 
-	public CaseMngt getCases() throws Exception;
+	public Page<CaseMngt> getCases() throws Exception;
 
 	public CaseMngt addCases(CaseMngt caseMngt) throws Exception;
 
